--- a/backend/package.json
+++ b/backend/package.json
@@ -13,31 +13,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^6.4.17",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^5.1.0",
+    "helmet": "^7.0.0",
     "inngest": "^3.40.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
-    "nodemailer": "^7.0.5",
-    "winston": "^3.17.0",
-    "dotenv": "^16.0.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
     "morgan": "^1.10.0",
-    "@google/generative-ai": "^0.21.0",
-    "uuid": "^10.0.0"
+    "nodemailer": "^7.0.5",
+    "uuid": "^10.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.1.0",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.2.1",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "@types/uuid": "^10.0.0"
+    "typescript": "^5.9.2"
   }
 }
