--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon --watch \"src/**/*.ts\" --exec ts-node src/index.ts",
     "build": "tsc"
   },
@@ -14,27 +14,27 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
-    "@types/bcrypt": "^6.0.0",
-    "@types/nodemailer": "^6.4.17",
-    "bcrypt": "^6.0.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "helmet": "^7.0.0",
     "inngest": "^3.40.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.0",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "^6.9.8",
     "uuid": "^10.0.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^24.2.1",
+    "@types/node": "^20.11.16",
+    "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
