--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^20.11.16",
+    "@types/nodemailer": "^6.4.17",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -24,20 +32,12 @@
     "mongoose": "^8.17.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.8",
+    "typescript": "^5.9.2",
     "uuid": "^10.0.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/morgan": "^1.9.10",
-    "@types/node": "^20.11.16",
-    "@types/nodemailer": "^6.4.17",
-    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "ts-node": "^10.9.2"
   }
 }
